force-app/main/default/objects/Provisionsverhandlung__c/Provisionsverhandlung__c.object-meta.xml
<CustomObject>
    <label>Provisionsverhandlung</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Provisionsverhandlung-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provisionsverhandlungen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>