force-app/main/default/objects/Provisionsverhandlung__c/fields/Grundprovision__c.field-meta.xml
<CustomField>
    <fullName>Grundprovision__c</fullName>
    <label>Grundprovision</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>