force-app/main/default/objects/Provisionsverhandlung__c/fields/Immobilie__c.field-meta.xml
<CustomField>
    <fullName>Immobilie__c</fullName>
    <label>Immobilie</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Provisionsverhandlungen</relationshipLabel>
    <relationshipName>Provisionsverhandlungen</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>